# TideVec

./: .gitignore  CMakeLists.txt  README.md  embedshift.md
.github/workflows/: ci.yml  docker.yml
benchmarks/temporal_vs_qdrant/: README.md  run_benchmark.py
benchmarks/temporal_vs_qdrant/results/: benchmark_results.json
data/: registry.json
deploy/: tenants.example.json
deploy/helm/tidevec/: Chart.yaml  values.yaml
deploy/helm/tidevec/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
docker/: DOCKERHUB_README.md  docker-compose.yml  prometheus.yml
docker/cpu/: Dockerfile  entrypoint.sh
docker/gpu/: Dockerfile
docker/nginx/: tidevec.conf
docker/tpu/: Dockerfile
include/tidevec/accelerator/: accelerated_collection.hpp  cpu_engine.hpp  device.hpp  dispatcher.hpp  gpu_engine.hpp  tpu_engine.hpp
include/tidevec/api/: collection_registry.hpp  json_serializers.hpp  managed_collection.hpp  rest_server.hpp  server_security.hpp
include/tidevec/cluster/: durable_collection.hpp  replica_set.hpp  shard_router.hpp  ultra_durable_collection.hpp
include/tidevec/consensus/: raft.hpp
include/tidevec/core/: collection.hpp  cortex_vector.hpp  metrics.hpp  temporal_scorer.hpp
include/tidevec/drift/: drift_bridge.hpp  drift_http.hpp
include/tidevec/erasure/: reed_solomon.hpp
include/tidevec/graph/: causal_graph.hpp
include/tidevec/health/: health_monitor.hpp
include/tidevec/index/: flat_index.hpp  tv_index.hpp
include/tidevec/observability/: otel_exporter.hpp  retrieval_trace.hpp
include/tidevec/ops/: backup_manager.hpp
include/tidevec/quantization/: product_quantizer.hpp
include/tidevec/storage/: segment_store.hpp  wal.hpp
proto/: tidevec.proto
scripts/: e2e_production_test.sh  generate_sdks.sh
sdk/cpp/: CMakeLists.txt  conanfile.py  vcpkg.json
sdk/cpp/cmake/: tidevecConfig.cmake.in
sdk/cpp/examples/: quickstart.cpp
sdk/cpp/include/tidevec/: client.hpp  collection.hpp  cortexdb.hpp  exceptions.hpp  half_life.hpp  tidevec.hpp  types.hpp
sdk/go/: go.mod  go_sdk_integration.go  go_sdk_test.go
sdk/go/tidevec/: client.go
sdk/java/: pom.xml  settings.xml
sdk/java/src/main/java/io/tidevec/: Edge.java  TideVecClient.java
sdk/python/: README.md  pyproject.toml
sdk/python/tidevec/: __init__.py  client.py  cortexdb_pb2.py  cortexdb_pb2_grpc.py  tidevec_pb2.py
src/accelerator/: gpu_kernels.cu  tpu_kernels.cc
src/api/: server_main.cpp
tests/benchmarks/: bench_billion_scale.cpp
tests/integration/: test_api.cpp
tests/unit/: test_accelerator.cpp  test_eleven_nines.cpp  test_scale_durability.cpp  test_tidevec.cpp
