[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "tidevec"
version         = "0.2.0"
description     = "Python SDK for TideVec — temporally-aware causal vector database"
readme          = "README.md"
license         = { text = "Apache-2.0" }
authors         = [{ name = "Ashish Verma", email = "contact@getcortexops.com" }]
requires-python = ">=3.9"
keywords        = ["vector-database", "embeddings", "ANN", "RAG", "agentic-AI"]
classifiers     = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
numpy  = ["numpy>=1.24"]
pandas = ["pandas>=2.0"]
dev    = ["pytest>=7", "pytest-asyncio", "black", "mypy"]

[project.urls]
Homepage      = "https://tidevec.io"
Repository    = "https://github.com/ashishodu2023/TideVec"
Documentation = "https://tidevec.io/docs"
"Bug Tracker" = "https://github.com/ashishodu2023/TideVec/issues"

[tool.hatch.build.targets.wheel]
packages = ["tidevec"]